--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,11 +1,26 @@
 // Navigation code here
 .nav-container {
   .centered-items();
+  height: 125px;
+  width: 100%;
 
   nav {
     text-align: center;
-    width: 48%;
-    margin: 15px 0;
+    width: 100%;
+    padding: 20px 0;
+    background-color: rgba(73, 126, 240, 0.603);
+    position: fixed;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+
+    div {
+      width: 50%;
+      display: flex;
+      justify-content: space-between;
+    }
 
     h1 {
       font-size: 4rem;
@@ -24,9 +39,13 @@
   }
 
   @media @phone {
-     
+
     nav {
-      width: 80%;
+      width: 100%;
+
+      div {
+        width: 90%;
+      }
     }
   }
 }
